--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,269 @@
+
+// Custom Theming for Angular Material
+// For more information: https://material.angular.io/guide/theming
+@use '@angular/material' as mat;
+// Plus imports for other components in your app.
+
+// Include the common styles for Angular Material. We include this here so that you only
+// have to load a single css file for Angular Material in your app.
+// Be sure that you only ever include this mixin once!
+@include mat.core();
+@import 'scss/colors';
+@import 'scss/forms';
+@import 'scss/fonts';
+@import 'scss/utilities';
+
+// Define the palettes for your theme using the Material Design palettes available in palette.scss
+// (imported above). For each palette, you can optionally specify a default, lighter, and darker
+// hue. Available color palettes: https://material.io/design/color/
+$k-timer-primary: mat.define-palette(mat.$indigo-palette);
+$k-timer-accent: mat.define-palette(mat.$pink-palette, A200, A100, A400);
+
+// The warn palette is optional (defaults to red).
+$k-timer-warn: mat.define-palette(mat.$red-palette);
+
+// Create the theme object. A theme consists of configurations for individual
+// theming systems such as "color" or "typography".
+$k-timer-theme: mat.define-light-theme((
+	color: (
+		primary: $k-timer-primary,
+		accent: $k-timer-accent,
+		warn: $k-timer-warn,
+	)
+));
+
+// Include theme styles for core and each component used in your app.
+// Alternatively, you can import and @include the theme mixins for each component
+// that you are using.
+@include mat.all-component-themes($k-timer-theme);
+
 /* You can add global styles to this file, and also import other style files */
+
+* {
+	transition: all 0.1s;
+}
+html, body {
+	background-color: $primary-bg;
+	color: $primary-fg;
+	width: 100vw;
+}
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+a,
+a:visited {
+	color: $primary-fg;
+	text-decoration: none;
+}
+
+a:hover,
+a:active {
+	color: darken($primary-fg, 25%);
+}
+.clock-container {
+	display: grid;
+	grid-template-columns: 1fr;
+	gap: 2rem;
+	padding: 2rem;
+	padding-left: 15rem;
+	padding-right: 15rem;
+	text-align: center;
+
+	.clock {
+		position: relative;
+		font-size: 13rem;
+		padding-top: 5rem;
+		padding-bottom: 4rem;
+		padding-left: 1rem;
+		cursor: pointer;
+		border-radius: 1rem;
+		background-color: lighten($primary-bg, 10%);
+		box-shadow: 1px 2px 9px 3px darken($primary-bg, 3%);
+		.time-item:nth-child(2) {
+			// opacity: 0;
+			// visibility: hidden;
+			font-size: 4.5rem;
+		}
+		.time-item:nth-child(2)::before {
+			content: ".";
+			letter-spacing: 0.35rem;
+		}
+	}
+
+	.clock.paused {
+		background-color: lighten($primary-bg, 10%);
+		border: 2px solid lighten($primary-bg, 20%);
+		color: $primary-fg;
+	}
+	.clock.active {
+		background-color: lighten($primary-bg, 15%);
+		border: 2px solid $highlight;
+		color: $highlight;
+	}
+
+	.clock.active.danger {
+		color: $danger;
+	}
+
+	.clock.show-decimal {
+		.time-item:nth-child(2) {
+			opacity: 1;
+			visibility: visible;
+		}
+	}
+
+	.increment {
+		position: absolute;
+		top: 36px;
+		right: 25px;
+		font-size: 4rem;
+		opacity: 0.45;
+	}
+}
+
+.controls {
+	display: grid;
+	justify-items: center;
+	gap: 1rem;
+
+	margin-top: 2rem;
+	margin-bottom: 2rem;
+
+	font-size: 2rem;
+	text-align: center;
+
+	.time-presets {
+		width: 50vw;
+		display: grid;
+		gap: 0.5em;
+		grid-template-columns: repeat(6, minmax(0, 1fr));
+	}
+
+	.settings {
+		width: 30vw;
+		display: grid;
+		grid-auto-flow: column;
+		gap: 1rem;
+	}
+
+	button > span {
+		font-size: 18px;
+	}
+	.mat-icon {
+		height: auto;
+		width: auto;
+	}
+	.control {
+		font-size: 1rem;
+	}
+	.control-btn {
+		background-color: $primary-bg;
+		color: $primary-fg;
+		border: 2px solid $highlight;
+		border-radius: 15px;
+		padding: 0.35rem 1rem 0.35rem;
+		cursor: pointer;
+		width: 100%;
+		outline: 0;
+	}
+	.control-btn:hover,
+	.control-btn.active {
+		background-color: $highlight;
+		color: $primary-bg;
+		outline: 0;
+	}
+
+	.select-container {
+		text-align: right;
+	}
+
+}
+
+@media only screen and (max-width: 1024px) {
+	.clock-container {
+		padding-left: 2rem;
+		padding-right: 2rem;
+		.clock {
+			font-size: 9rem;
+			padding-top: 6rem;
+			padding-bottom: 5rem;
+			.time-item:nth-child(2) {
+				font-size: 3rem;
+			}
+		}
+	}
+	.controls {
+		.time-presets {
+			width: 70vw;
+		}
+		.settings {
+			width: 40vw;
+		}
+	}
+}
+
+@media only screen and (max-width: 769px) {
+	.clock-container {
+		.clock {
+			font-size: 7;
+			.time-item:nth-child(2) {
+				font-size: 2.5rem;
+			}
+		}
+
+		.increment {
+			top: 15px;
+			right: 20px;
+			font-size: 2rem;
+		}
+	}
+	.controls {
+		.time-presets,
+		.settings {
+			width: 85vw;
+		}
+	}
+}
+
+@media only screen and (max-width: 480px) {
+	.clock-container {
+		.clock {
+			font-size: 5rem;
+			padding-top: 3.5rem;
+			padding-bottom: 2.5rem;
+			padding-left: 1rem;
+			.time-item:nth-child(2) {
+				font-size: 1.5rem;
+			}
+		}
+		.increment {
+			top: 5px;
+			right: 10px;
+			font-size: 1rem;
+		}
+	}
+
+	.controls {
+		.time-presets,
+		.settings {
+			width: 100vw;
+			max-width: 100vw;
+			gap: 0.5rem;
+		}
+		button > span {
+			font-size: 16px;
+		}
+		.control-btn {
+			padding: 0.25rem 1rem;
+		}
+	}
+}
+
+footer {
+	grid-area: -1;
+	font-size: 12px;
+	padding: 0.5rem 0.5rem;
+	text-align: center;
+	opacity: 0.721;
+	background-color: transparentize($primary-fg, 0.85);
+	color: $primary-fg;
+}
