adds cheeky progress bar

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -88,4 +88,7 @@
 			</div>
 		</div>
 	</div>
+
+	<mat-progress-bar class="progress-bar" color="accent" value="{{progress}}"></mat-progress-bar>
+
 </main>
