uses fancy angular material color palettes

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -89,6 +89,6 @@
 		</div>
 	</div>
 
-	<mat-progress-bar class="progress-bar" color="accent" value="{{progress}}"></mat-progress-bar>
+	<mat-progress-bar class="progress-bar" color="primary" value="{{progress}}"></mat-progress-bar>
 
 </main>
