--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -80,7 +80,8 @@
 	</div>
 
 	<div class="clock-container">
-		<div id="clock1" class="clock font-{{clock1.font}} {{clock1.state}} {{cd1.left/1000 < dangerZone ? 'danger': ''}}" (click)="onStartStop()">
+		<div id="clock1" class="clock font-{{clock1.font}} {{clock1.state}} {{cd1.left/1000 < dangerZone ? 'danger': ''}}">
+			<div class="click-overlay" aria-hidden="true" (click)="onStartStop()"></div>
 			<countdown #cd1 [config]="config1" (event)="handleEvent($event)"></countdown>
 			<div class="icon">
 				<mat-icon *ngIf="clock1.state == 'paused'">play_arrow</mat-icon>
