--- a/src/styles.scss
+++ b/src/styles.scss
@@ -110,6 +110,14 @@ a:active {
 	}
 }
 
+.click-overlay {
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	top: 0;
+	left: 0;
+}
+
 .controls {
 	display: grid;
 	justify-items: center;
